# 42Urduliz

./: 20221126_prueba_git.sql  Makefile  README.md  README.txt  ft_bzero.c  ft_calloc.c  ft_memcpy.c  ft_memset.c  ft_strchr.c  ft_strncmp.c  ft_strtrim.c  ft_substr.c  libft.h
42_push_swap/: Makefile
42_push_swap/libraries/libft/: CMakeLists.txt  Makefile
42_push_swap/libraries/libft/include/: libft.h  libft.h.gch
42_push_swap/source/: push_swap.h  push_swap_main.c  push_swap_moves_push.c  push_swap_moves_reverse.c  push_swap_moves_rotate.c  push_swap_moves_swap.c  (+3 more)
Born2beroot/: LEEDME.md
ft_printf/: Makefile  Makefile2  README.md  ft_nbrlen.c  ft_print_hexadecimal.c  ft_printf.c  ft_printf.h  ft_printf_utils.c  ft_ptr_to_hexadecimal.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putptr_fd.c  ft_putstr_fd.c  ft_putuint_fd.c  ft_uitoa.c  ft_x_or_X.c
get_next_line/: Makefile  README.md  get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  help.txt  libft.h  main.c
minitalk/: LEEDME.md  Makefile
push_swap/: Subject.txt  push_swap.c  push_swap.h
so_long/: Makefile
(+109 files in other folders)
